code for simulator

--- a/examples/5-2.simulate_time_crystal.ipynb
+++ b/examples/5-2.simulate_time_crystal.ipynb
@@ -58,18 +58,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'submit' from 'janusq.cloud_interface' (/Users/tcn/JanusQ/examples/../janusq/cloud_interface/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mjanusq\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_objects\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcircuit\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Circuit\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mjanusq\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcloud_interface\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m submit\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# define the number of qubits, in this tutorial we use 8 qubits\u001b[39;00m\n\u001b[1;32m      9\u001b[0m num_qubits \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m8\u001b[39m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'submit' from 'janusq.cloud_interface' (/Users/tcn/JanusQ/examples/../janusq/cloud_interface/__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ┌────────────┐ ░ \n",
+      "q_0: ┤ Rx(3.1102) ├─░─\n",
+      "     ├────────────┤ ░ \n",
+      "q_1: ┤ Rx(3.1102) ├─░─\n",
+      "     ├────────────┤ ░ \n",
+      "q_2: ┤ Rx(3.1102) ├─░─\n",
+      "     ├────────────┤ ░ \n",
+      "q_3: ┤ Rx(3.1102) ├─░─\n",
+      "     ├────────────┤ ░ \n",
+      "q_4: ┤ Rx(3.1102) ├─░─\n",
+      "     ├────────────┤ ░ \n",
+      "q_5: ┤ Rx(3.1102) ├─░─\n",
+      "     ├────────────┤ ░ \n",
+      "q_6: ┤ Rx(3.1102) ├─░─\n",
+      "     ├────────────┤ ░ \n",
+      "q_7: ┤ Rx(3.1102) ├─░─\n",
+      "     └────────────┘ ░ \n"
      ]
     }
    ],
@@ -79,7 +91,7 @@
     "import numpy as np\n",
     "sys.path.append('../')\n",
     "from janusq.data_objects.circuit import Circuit\n",
-    "from janusq.cloud_interface import submit\n",
+    "from janusq.cloud_interface import submit, get_result\n",
     "\n",
     "# define the number of qubits, in this tutorial we use 8 qubits\n",
     "num_qubits = 8\n",
@@ -112,23 +124,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     ┌────────────┐ ░           ░           ░                   ░            ░ »\n",
-      "q_0: ┤ Rx(3.1102) ├─░─────■─────░───────────░───────────────────░────────────░─»\n",
-      "     ├────────────┤ ░ ┌───┴───┐ ░           ░ ┌───────────────┐ ░            ░ »\n",
-      "q_1: ┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░─────■─────░─┤ Ry(-0.099013) ├─░─────■──────░─»\n",
-      "     ├────────────┤ ░ └───────┘ ░ ┌───┴───┐ ░ └┬──────────────┤ ░ ┌───┴────┐ ░ »\n",
-      "q_2: ┤ Rx(3.1102) ├─░─────■─────░─┤ Rz(π) ├─░──┤ Ry(-0.71327) ├─░─┤ Rz(-π) ├─░─»\n",
-      "     ├────────────┤ ░ ┌───┴───┐ ░ └───────┘ ░  ├─────────────┬┘ ░ └────────┘ ░ »\n",
-      "q_3: ┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░─────■─────░──┤ Ry(-1.5075) ├──░─────■──────░─»\n",
-      "     ├────────────┤ ░ └───────┘ ░ ┌───┴───┐ ░  ├─────────────┤  ░ ┌───┴────┐ ░ »\n",
-      "q_4: ┤ Rx(3.1102) ├─░─────■─────░─┤ Rz(π) ├─░──┤ Ry(-2.9103) ├──░─┤ Rz(-π) ├─░─»\n",
-      "     ├────────────┤ ░ ┌───┴───┐ ░ └───────┘ ░  ├─────────────┤  ░ └────────┘ ░ »\n",
-      "q_5: ┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░─────■─────░──┤ Ry(-1.2537) ├──░─────■──────░─»\n",
-      "     ├────────────┤ ░ └───────┘ ░ ┌───┴───┐ ░  ├─────────────┤  ░ ┌───┴────┐ ░ »\n",
-      "q_6: ┤ Rx(3.1102) ├─░─────■─────░─┤ Rz(π) ├─░──┤ Ry(-0.3157) ├──░─┤ Rz(-π) ├─░─»\n",
-      "     ├────────────┤ ░ ┌───┴───┐ ░ └───────┘ ░  └─────────────┘  ░ └────────┘ ░ »\n",
-      "q_7: ┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░───────────░───────────────────░────────────░─»\n",
-      "     └────────────┘ ░ └───────┘ ░           ░                   ░            ░ »\n",
+      "     ┌────────────┐ ░           ░           ░                  ░            ░ »\n",
+      "q_0: ┤ Rx(3.1102) ├─░─────■─────░───────────░──────────────────░────────────░─»\n",
+      "     ├────────────┤ ░ ┌───┴───┐ ░           ░  ┌────────────┐  ░            ░ »\n",
+      "q_1: ┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░─────■─────░──┤ Ry(-3.918) ├──░─────■──────░─»\n",
+      "     ├────────────┤ ░ └───────┘ ░ ┌───┴───┐ ░ ┌┴────────────┤  ░ ┌───┴────┐ ░ »\n",
+      "q_2: ┤ Rx(3.1102) ├─░─────■─────░─┤ Rz(π) ├─░─┤ Ry(-3.1838) ├──░─┤ Rz(-π) ├─░─»\n",
+      "     ├────────────┤ ░ ┌───┴───┐ ░ └───────┘ ░ ├─────────────┤  ░ └────────┘ ░ »\n",
+      "q_3: ┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░─────■─────░─┤ Ry(-2.1715) ├──░─────■──────░─»\n",
+      "     ├────────────┤ ░ └───────┘ ░ ┌───┴───┐ ░ ├─────────────┤  ░ ┌───┴────┐ ░ »\n",
+      "q_4: ┤ Rx(3.1102) ├─░─────■─────░─┤ Rz(π) ├─░─┤ Ry(-2.9318) ├──░─┤ Rz(-π) ├─░─»\n",
+      "     ├────────────┤ ░ ┌───┴───┐ ░ └───────┘ ░ ├─────────────┤  ░ └────────┘ ░ »\n",
+      "q_5: ┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░─────■─────░─┤ Ry(-1.6999) ├──░─────■──────░─»\n",
+      "     ├────────────┤ ░ └───────┘ ░ ┌───┴───┐ ░ ├─────────────┴┐ ░ ┌───┴────┐ ░ »\n",
+      "q_6: ┤ Rx(3.1102) ├─░─────■─────░─┤ Rz(π) ├─░─┤ Ry(-0.86829) ├─░─┤ Rz(-π) ├─░─»\n",
+      "     ├────────────┤ ░ ┌───┴───┐ ░ └───────┘ ░ └──────────────┘ ░ └────────┘ ░ »\n",
+      "q_7: ┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░───────────░──────────────────░────────────░─»\n",
+      "     └────────────┘ ░ └───────┘ ░           ░                  ░            ░ »\n",
       "«                ░ \n",
       "«q_0: ────■──────░─\n",
       "«     ┌───┴────┐ ░ \n",
@@ -189,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -198,21 +210,21 @@
      "text": [
       "     ┌───┐ ░ ┌────────────┐ ░           ░           ░                  ░ »\n",
       "q_0: ┤ X ├─░─┤ Rx(3.1102) ├─░─────■─────░───────────░──────────────────░─»\n",
-      "     ├───┤ ░ ├────────────┤ ░ ┌───┴───┐ ░           ░ ┌──────────────┐ ░ »\n",
-      "q_1: ┤ X ├─░─┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░─────■─────░─┤ Ry(-0.56013) ├─░─»\n",
-      "     ├───┤ ░ ├────────────┤ ░ └───────┘ ░ ┌───┴───┐ ░ ├──────────────┤ ░ »\n",
-      "q_2: ┤ X ├─░─┤ Rx(3.1102) ├─░─────■─────░─┤ Rz(π) ├─░─┤ Ry(-0.22665) ├─░─»\n",
-      "     ├───┤ ░ ├────────────┤ ░ ┌───┴───┐ ░ └───────┘ ░ ├─────────────┬┘ ░ »\n",
-      "q_3: ┤ X ├─░─┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░─────■─────░─┤ Ry(-2.9046) ├──░─»\n",
+      "     └───┘ ░ ├────────────┤ ░ ┌───┴───┐ ░           ░ ┌─────────────┐  ░ »\n",
+      "q_1: ──────░─┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░─────■─────░─┤ Ry(-3.5288) ├──░─»\n",
+      "           ░ ├────────────┤ ░ └───────┘ ░ ┌───┴───┐ ░ ├─────────────┴┐ ░ »\n",
+      "q_2: ──────░─┤ Rx(3.1102) ├─░─────■─────░─┤ Rz(π) ├─░─┤ Ry(-0.87833) ├─░─»\n",
+      "     ┌───┐ ░ ├────────────┤ ░ ┌───┴───┐ ░ └───────┘ ░ ├─────────────┬┘ ░ »\n",
+      "q_3: ┤ X ├─░─┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░─────■─────░─┤ Ry(-3.3434) ├──░─»\n",
       "     └───┘ ░ ├────────────┤ ░ └───────┘ ░ ┌───┴───┐ ░ ├─────────────┤  ░ »\n",
-      "q_4: ──────░─┤ Rx(3.1102) ├─░─────■─────░─┤ Rz(π) ├─░─┤ Ry(-2.8146) ├──░─»\n",
-      "     ┌───┐ ░ ├────────────┤ ░ ┌───┴───┐ ░ └───────┘ ░ ├─────────────┤  ░ »\n",
-      "q_5: ┤ X ├─░─┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░─────■─────░─┤ Ry(-2.3609) ├──░─»\n",
-      "     ├───┤ ░ ├────────────┤ ░ └───────┘ ░ ┌───┴───┐ ░ ├─────────────┤  ░ »\n",
-      "q_6: ┤ X ├─░─┤ Rx(3.1102) ├─░─────■─────░─┤ Rz(π) ├─░─┤ Ry(-3.7787) ├──░─»\n",
-      "     └───┘ ░ ├────────────┤ ░ ┌───┴───┐ ░ └───────┘ ░ └─────────────┘  ░ »\n",
-      "q_7: ──────░─┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░───────────░──────────────────░─»\n",
-      "           ░ └────────────┘ ░ └───────┘ ░           ░                  ░ »\n",
+      "q_4: ──────░─┤ Rx(3.1102) ├─░─────■─────░─┤ Rz(π) ├─░─┤ Ry(-0.6183) ├──░─»\n",
+      "           ░ ├────────────┤ ░ ┌───┴───┐ ░ └───────┘ ░ └┬────────────┤  ░ »\n",
+      "q_5: ──────░─┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░─────■─────░──┤ Ry(-3.349) ├──░─»\n",
+      "           ░ ├────────────┤ ░ └───────┘ ░ ┌───┴───┐ ░  ├────────────┤  ░ »\n",
+      "q_6: ──────░─┤ Rx(3.1102) ├─░─────■─────░─┤ Rz(π) ├─░──┤ Ry(-3.073) ├──░─»\n",
+      "     ┌───┐ ░ ├────────────┤ ░ ┌───┴───┐ ░ └───────┘ ░  └────────────┘  ░ »\n",
+      "q_7: ┤ X ├─░─┤ Rx(3.1102) ├─░─┤ Rz(π) ├─░───────────░──────────────────░─»\n",
+      "     └───┘ ░ └────────────┘ ░ └───────┘ ░           ░                  ░ »\n",
       "«                ░            ░ \n",
       "«q_0: ───────────░─────■──────░─\n",
       "«                ░ ┌───┴────┐ ░ \n",
@@ -268,33 +280,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build noise model\n",
-    "For more realistic simualtion, we add pauli noise for one bit gate and two bit gate."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_noise_model(e1, e2):\n",
-    "    error_1 = pauli_error([('X', e1/3), ('Y', e1/3), ('Z', e1/3),('I',1-e1)])\n",
-    "    error_2 = pauli_error([('XX', e2/15), ('XY', e2/15), ('XZ', e2/15), \n",
-    "                        ('YX', e2/15), ('YY', e2/15), ('YZ', e2/15), \n",
-    "                        ('ZX', e2/15), ('ZY', e2/15), ('ZZ', e2/15), \n",
-    "                        ('II',1-9/15*e2)])\n",
-    "\n",
-    "    noise_model = NoiseModel()\n",
-    "    noise_model.add_all_qubit_quantum_error(error_1, ['rx', 'ry'])\n",
-    "    noise_model.add_all_qubit_quantum_error(error_2, ['cz'])\n",
-    "    return noise_model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Caculate the expection result\n",
     "For each duration of time step, we caculate the expection based on the measurement result.\n",
     "\n",
@@ -303,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,37 +314,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'submit' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m shots \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3000\u001b[39m\n\u001b[1;32m     13\u001b[0m run_type \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msqcg\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 15\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43msubmit\u001b[49m(circuit\u001b[38;5;241m=\u001b[39mqc, shots\u001b[38;5;241m=\u001b[39mshots, run_type\u001b[38;5;241m=\u001b[39mrun_type, API_TOKEN\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# calculate the expectation value\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_qubits):\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'submit' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'status': 0, 'msg': '成功', 'data': {'task_status': 'running', 'result_id': 'af1d1885ff2f461180db9574b4148472', 'run_type': 'simulator'}}\n"
      ]
     }
    ],
    "source": [
+    "import time\n",
     "# generate the parameter from uniform distribution\n",
     "Jk = uniform.rvs(0, 2, size=num_qubits-2)\n",
     "# generate the circuit and get the reversed qubits\n",
     "qc, reversed = build_circuit(2, Jk)\n",
-    "qc = qc.to_qiskit()\n",
-    "qc.measure_all()\n",
     "\n",
     "shots = 3000\n",
-    "run_type = 'sqcg'\n",
+    "run_type = 'simulator'\n",
     "\n",
-    "result = submit(circuit=qc, shots=shots, run_type=run_type, API_TOKEN='1')\n",
+    "result_id = submit(circuit=qc, shots=shots, run_type=run_type, API_TOKEN='1')\n",
     "\n",
-    "# calculate the expectation value\n",
-    "for i in range(num_qubits):\n",
-    "    print(expectation_value(res, i, reversed))"
+    "res = get_result(result_id['data']['result_id'], run_type=run_type)\n",
+    "print(res)\n",
+    "# # calculate the expectation value\n",
+    "# for i in range(num_qubits):\n",
+    "#     print(expectation_value(res, i, reversed))"
    ]
   },
   {
