--- a/examples/5-1.solve_sat_domain_problem.ipynb
+++ b/examples/5-1.solve_sat_domain_problem.ipynb
@@ -73,18 +73,18 @@
      "data": {
       "text/plain": [
        "{'restarts': 1,\n",
-       " 'conflicts': 7,\n",
-       " 'conflict cost': 0.078,\n",
-       " 'decisions': 5,\n",
-       " 'decisions cost': 0.061,\n",
-       " 'propagations': 383,\n",
-       " 'propagations cost': 0.318,\n",
-       " 'conflict literals': 43,\n",
-       " 'actual CPU time': 2.69447,\n",
-       " 'solving time': 1.106,\n",
-       " 'annealing time': 0.4,\n",
-       " 'simulation time': 1.38003,\n",
-       " 'quantum success number': 11,\n",
+       " 'conflicts': 5,\n",
+       " 'conflict cost': 0.051,\n",
+       " 'decisions': 0,\n",
+       " 'decisions cost': 0.042,\n",
+       " 'propagations': 240,\n",
+       " 'propagations cost': 0.276,\n",
+       " 'conflict literals': 23,\n",
+       " 'actual CPU time': 2.52384,\n",
+       " 'solving time': 0.844,\n",
+       " 'annealing time': 0.24,\n",
+       " 'simulation time': 1.64997,\n",
+       " 'quantum success number': 3,\n",
        " 'quantum conflict number': 9,\n",
        " 'quantum one time solve number': 0,\n",
        " 'is satisfiable': True,\n",
@@ -127,14 +127,14 @@
       "text/plain": [
        "{'restarts': 3,\n",
        " 'conflicts': 384,\n",
-       " 'conflict cost': 3.48,\n",
+       " 'conflict cost': 3.618,\n",
        " 'decisions': 463,\n",
-       " 'decisions cost': 0.566,\n",
+       " 'decisions cost': 0.616,\n",
        " 'propagations': 9130,\n",
-       " 'propagations cost': 6.472,\n",
+       " 'propagations cost': 6.717,\n",
        " 'conflict literals': 2416,\n",
-       " 'actual CPU time': 0.1198,\n",
-       " 'solving time': 12.89,\n",
+       " 'actual CPU time': 0.123883,\n",
+       " 'solving time': 13.451,\n",
        " 'annealing time': 0.0,\n",
        " 'simulation time': 0.0,\n",
        " 'quantum success number': 0,\n",
@@ -163,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 145, 'minisat': 1383}, 'conflict cost': {'janus': 1.4050000000000002, 'minisat': 12.207000000000003}, 'decisions': {'janus': 34, 'minisat': 1814}, 'decisions cost': {'janus': 0.43500000000000005, 'minisat': 2.3430000000000004}, 'propagations': {'janus': 4407, 'minisat': 32252}, 'propagations cost': {'janus': 4.26, 'minisat': 22.713}, 'conflict literals': {'janus': 901, 'minisat': 8726}, 'actual CPU time': {'janus': 35.6241, 'minisat': 1.004006}, 'solving time': {'janus': 15.620999999999999, 'minisat': 45.886}, 'annealing time': {'janus': 6.48, 'minisat': 0.0}, 'simulation time': {'janus': 19.33545, 'minisat': 0.0}, 'quantum success number': {'janus': 136, 'minisat': 0}, 'quantum conflict number': {'janus': 188, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
+      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 143, 'minisat': 1383}, 'conflict cost': {'janus': 1.4689999999999996, 'minisat': 12.712999999999997}, 'decisions': {'janus': 34, 'minisat': 1814}, 'decisions cost': {'janus': 0.4750000000000001, 'minisat': 2.4249999999999994}, 'propagations': {'janus': 4431, 'minisat': 32252}, 'propagations cost': {'janus': 5.236, 'minisat': 23.714}, 'conflict literals': {'janus': 847, 'minisat': 8726}, 'actual CPU time': {'janus': 37.84356, 'minisat': 1.107393}, 'solving time': {'janus': 18.371, 'minisat': 47.944}, 'annealing time': {'janus': 7.340000000000001, 'minisat': 0.0}, 'simulation time': {'janus': 36.08566, 'minisat': 0.0}, 'quantum success number': {'janus': 140, 'minisat': 0}, 'quantum conflict number': {'janus': 227, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
      ]
     }
    ],
@@ -234,19 +234,19 @@
        "    <tr>\n",
        "      <th>janus</th>\n",
        "      <td>12</td>\n",
-       "      <td>145</td>\n",
-       "      <td>1.405</td>\n",
+       "      <td>143</td>\n",
+       "      <td>1.469</td>\n",
        "      <td>34</td>\n",
-       "      <td>0.435</td>\n",
-       "      <td>4407</td>\n",
-       "      <td>4.260</td>\n",
-       "      <td>901</td>\n",
-       "      <td>35.624100</td>\n",
-       "      <td>15.621</td>\n",
-       "      <td>6.48</td>\n",
-       "      <td>19.33545</td>\n",
-       "      <td>136</td>\n",
-       "      <td>188</td>\n",
+       "      <td>0.475</td>\n",
+       "      <td>4431</td>\n",
+       "      <td>5.236</td>\n",
+       "      <td>847</td>\n",
+       "      <td>37.843560</td>\n",
+       "      <td>18.371</td>\n",
+       "      <td>7.34</td>\n",
+       "      <td>36.08566</td>\n",
+       "      <td>140</td>\n",
+       "      <td>227</td>\n",
        "      <td>0</td>\n",
        "      <td>12</td>\n",
        "      <td>12</td>\n",
@@ -255,14 +255,14 @@
        "      <th>minisat</th>\n",
        "      <td>19</td>\n",
        "      <td>1383</td>\n",
-       "      <td>12.207</td>\n",
+       "      <td>12.713</td>\n",
        "      <td>1814</td>\n",
-       "      <td>2.343</td>\n",
+       "      <td>2.425</td>\n",
        "      <td>32252</td>\n",
-       "      <td>22.713</td>\n",
+       "      <td>23.714</td>\n",
        "      <td>8726</td>\n",
-       "      <td>1.004006</td>\n",
-       "      <td>45.886</td>\n",
+       "      <td>1.107393</td>\n",
+       "      <td>47.944</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00000</td>\n",
        "      <td>0</td>\n",
@@ -277,19 +277,19 @@
       ],
       "text/plain": [
        "         restarts  conflicts  conflict cost  decisions  decisions cost  \\\n",
-       "janus          12        145          1.405         34           0.435   \n",
-       "minisat        19       1383         12.207       1814           2.343   \n",
+       "janus          12        143          1.469         34           0.475   \n",
+       "minisat        19       1383         12.713       1814           2.425   \n",
        "\n",
        "         propagations  propagations cost  conflict literals  actual CPU time  \\\n",
-       "janus            4407              4.260                901        35.624100   \n",
-       "minisat         32252             22.713               8726         1.004006   \n",
+       "janus            4431              5.236                847        37.843560   \n",
+       "minisat         32252             23.714               8726         1.107393   \n",
        "\n",
        "         solving time  annealing time  simulation time  \\\n",
-       "janus          15.621            6.48         19.33545   \n",
-       "minisat        45.886            0.00          0.00000   \n",
+       "janus          18.371            7.34         36.08566   \n",
+       "minisat        47.944            0.00          0.00000   \n",
        "\n",
        "         quantum success number  quantum conflict number  \\\n",
-       "janus                       136                      188   \n",
+       "janus                       140                      227   \n",
        "minisat                       0                        0   \n",
        "\n",
        "         quantum one time solve number  is satisfiable  is sat  \n",
