--- a/examples/3-6.extend_framework_bug_identification.ipynb
+++ b/examples/3-6.extend_framework_bug_identification.ipynb
@@ -253,7 +253,7 @@
     "algorithm_circuits = []\n",
     "\n",
     "backend = LinearBackend(8)\n",
-    "up_model = RandomwalkModel(n_steps = 2, n_walks = 30, backend = backend, alpha=.5)\n",
+    "up_model = RandomwalkModel(n_steps = 2, n_walks = 30, backend = backend, decay=.5)\n",
     "\n",
     "for n_qubits in range(5, backend.n_qubits + 1):\n",
     "    for algorithm, circuit in zip(algorithm_names, get_algorithm_circuits(n_qubits, backend, algorithm_names)):\n",
