add hyqsat real QC choice

--- a/examples/5-1.solve_sat_domain_problem.ipynb
+++ b/examples/5-1.solve_sat_domain_problem.ipynb
@@ -52,7 +52,8 @@
     "file_path = \"cnf_examples/UF100/uf100-01.cnf\"  # input cnf flie\n",
     "cpu_lim = 0  # limit the cpu time (s). 0 means infinite\n",
     "mem_lim = 0  # limit the memory 0 means infinite\n",
-    "strictp = True  # isStrict"
+    "strictp = True  # isStrict\n",
+    "use_realQC = False # use real quantum computer provided by dwave, but you need to get dwave auth."
    ]
   },
   {
@@ -73,19 +74,19 @@
      "data": {
       "text/plain": [
        "{'restarts': 1,\n",
-       " 'conflicts': 6,\n",
-       " 'conflict cost': 0.063,\n",
-       " 'decisions': 4,\n",
-       " 'decisions cost': 0.045,\n",
-       " 'propagations': 316,\n",
-       " 'propagations cost': 0.394,\n",
-       " 'conflict literals': 35,\n",
-       " 'actual CPU time': 2.87466,\n",
-       " 'solving time': 1.524,\n",
-       " 'annealing time': 0.66,\n",
-       " 'simulation time': 2.2351,\n",
-       " 'quantum success number': 11,\n",
-       " 'quantum conflict number': 22,\n",
+       " 'conflicts': 8,\n",
+       " 'conflict cost': 0.069,\n",
+       " 'decisions': 0,\n",
+       " 'decisions cost': 0.03,\n",
+       " 'propagations': 360,\n",
+       " 'propagations cost': 0.325,\n",
+       " 'conflict literals': 59,\n",
+       " 'actual CPU time': 7.44417,\n",
+       " 'solving time': 1.1,\n",
+       " 'annealing time': 0.46,\n",
+       " 'simulation time': 1.25079,\n",
+       " 'quantum success number': 4,\n",
+       " 'quantum conflict number': 19,\n",
        " 'quantum one time solve number': 0,\n",
        " 'is satisfiable': True,\n",
        " 'is sat': True}"
@@ -98,7 +99,7 @@
    ],
    "source": [
     "# solve by Janus-SAT\n",
-    "solve_by_janusct(file_path, verb=False, cpu_lim=cpu_lim, mem_lim=mem_lim)"
+    "solve_by_janusct(file_path, verb=True, cpu_lim=cpu_lim, mem_lim=mem_lim)"
    ]
   },
   {
@@ -127,14 +128,14 @@
       "text/plain": [
        "{'restarts': 3,\n",
        " 'conflicts': 384,\n",
-       " 'conflict cost': 3.61,\n",
+       " 'conflict cost': 2.866,\n",
        " 'decisions': 463,\n",
-       " 'decisions cost': 0.601,\n",
+       " 'decisions cost': 0.47,\n",
        " 'propagations': 9130,\n",
-       " 'propagations cost': 7.074,\n",
+       " 'propagations cost': 5.591,\n",
        " 'conflict literals': 2416,\n",
-       " 'actual CPU time': 0.1262,\n",
-       " 'solving time': 13.715,\n",
+       " 'actual CPU time': 0.097112,\n",
+       " 'solving time': 10.669,\n",
        " 'annealing time': 0.0,\n",
        " 'simulation time': 0.0,\n",
        " 'quantum success number': 0,\n",
@@ -333,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
