--- a/examples/5-2.simulate_time_crystal.ipynb
+++ b/examples/5-2.simulate_time_crystal.ipynb
@@ -347,7 +347,7 @@
     "            # generate the parameter from uniform distribution\n",
     "            Jk = uniform.rvs(0, dis_pram, size=num_qubits-2)\n",
     "            qc, reversed = build_circuit(i, Jk)\n",
-    "            result_id = submit(circuit=qc, label='time_crystal', shots=shots, run_type=run_type, API_TOKEN='eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzE0MDU5MzE5LCJpYXQiOjE3MTQwNDg1MTksImp0aSI6IjRhNjNmYmZmOWU0YjRlNzU5YjliOGE5NTRmZmE0ZTE2IiwidXNlcl9pZCI6NjAsIm5hbWUiOiJhZG1pbkB6anUuZWR1LmNuIn0.AcR8B0UDEpvj64vw_klmKMrNCkcjSZENtVU0fCEXRaE')\n",
+    "            result_id = submit(circuit=qc, label='time_crystal', shots=shots, run_type=run_type, API_TOKEN='required')\n",
     "            result = get_result(result_id['data']['result_id'], run_type=run_type)\n",
     "            res_0 = expectation_value(result, 0, reversed)\n",
     "            mid = 0\n",
